--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -4,7 +4,7 @@
 <p><%= link_to 'Invoices', '/admin/invoices' %><p>
 
 <section id="top5">
-  <h2> Top 5 customers </h2> 
+  <h2> Top 5 Customers: </h2> 
   <% @customers.top_5.each do |customer| %>
     <div id="top5-<%= customer.id %>">
     <%= customer.first_name %>
