US3 in progress

--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -4,3 +4,14 @@
 <br>
 <%= link_to "My Items Index", "/merchants/#{@merchant.id}/items" %>
 <%= link_to "My Invoices Index", "/merchants/#{@merchant.id}/invoices" %>
+
+<section id="top5">
+  <h2> Top 5 Customers: </h2> 
+  <% @top_customers.top_5.each do |customer| %>
+    <div id="top5-<%= customer.id %>">
+    <%= customer.first_name %>
+    <%= customer.last_name %>
+    <%= customer.count_success_transactions %>
+    </div>
+  <% end %>
+</section>
