--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -2,16 +2,10 @@
 
 <h2><%= @merchant.name %></h2>
 <br>
-<%= link_to "My Items Index", "/merchants/#{@merchant.id}/items" %>
-<%= link_to "My Invoices Index", "/merchants/#{@merchant.id}/invoices" %>
+<%= link_to "My Items", "/merchants/#{@merchant.id}/items" %>
+<%= link_to "My Invoices", "/merchants/#{@merchant.id}/invoices" %>
 
-<section id="top5">
-  <h2> Top 5 Customers: </h2> 
-  <% @top_customers.top_5.each do |customer| %>
-    <div id="top5-<%= customer.id %>">
-    <%= customer.first_name %>
-    <%= customer.last_name %>
-    <%= customer.count_success_transactions %>
-    </div>
+  <h2> Top Customers: </h2> 
+  <% @top_customers.each do |customer| %>
+    <p> <%= customer.first_name %> <%= customer.last_name%>: <%= customer.count_success_transactions %> purchases </p>
   <% end %>
-</section>
