--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -1,11 +1,20 @@
 <h1>Merchant Dashboard</h1>
 
-<h2><%= @merchant.name %></h2>
-<br>
-<%= link_to "My Items", "/merchants/#{@merchant.id}/items" %>
-<%= link_to "My Invoices", "/merchants/#{@merchant.id}/invoices" %>
+<div id="merchants">
+  <h2><%= @merchant.name %></h2>
+  <br>
+  <%= link_to "My Items", "/merchants/#{@merchant.id}/items" %>
+  <%= link_to "My Invoices", "/merchants/#{@merchant.id}/invoices" %>
 
   <h2> Top Customers: </h2> 
   <% @top_customers.each do |customer| %>
     <p> <%= customer.first_name %> <%= customer.last_name%>: <%= customer.count_success_transactions %> purchases </p>
   <% end %>
+</div>  
+
+<div id="merchant-items">
+  <h3>Items Ready To Ship</h3>
+  <p><% @items.each do |item| %></p>
+    <p><%= item.name %> - <%= "Invoice #" %><%= link_to item.invoice_items[0].invoice_id, "/merchants/#{@merchant.id}/invoices/#{item.invoice_items[0].invoice_id}" %>
+  <% end %>
+</div>
