--- a/app/views/admin/merchants/edit.html.erb
+++ b/app/views/admin/merchants/edit.html.erb
@@ -1,5 +1,5 @@
-<%= form_with model: @merchant, local: true do |f| %>
+<%= form_with url: "/admin/merchants/#{@merchant.id}", method: :patch, data: {turbo: false}, local: true do |f| %>
   <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name, value: "#{@merchant.name}" %>
   <%= f.submit %>
 <% end %>
