add update merchant method

--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -5,15 +5,13 @@
   <%= link_to  merchant.name, "/admin/merchants/#{merchant.id}" %> 
   <p> Status: <%= merchant.status %></p>
   <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
-    <%= f.hidden_field merchant_status: "update_status" %>
-    <%= f.hidden_field status: "0" %>
-    <%= f.hidden_field merchant_id: merchant.id %>
+    <%= hidden_field_tag :status, 0 %>
+    <%= hidden_field_tag :merchant_id, merchant.id %>
     <%= f.submit "Enable #{merchant.name}"%>
   <% end %>
   <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
-    <%= f.hidden_field merchant_status: "update_status" %>
-    <%= f.hidden_field status: "1" %>
-    <%= f.hidden_field merchant_id: "#{merchant.id}" %>
+    <%= hidden_field_tag :status, 1 %>
+    <%= hidden_field_tag :merchant_id, "#{merchant.id}" %>
     <%= f.submit "Disable #{merchant.name}"%>
   <% end %>
   </div> <br>
