--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -5,11 +5,13 @@
   <%= link_to  merchant.name, "/admin/merchants/#{merchant.id}" %> 
   <p> Status: <%= merchant.status %></p>
   <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
+    <%= hidden_field_tag :merchant_status, "update_status" %>
     <%= hidden_field_tag :status, 0 %>
     <%= hidden_field_tag :merchant_id, merchant.id %>
     <%= f.submit "Enable #{merchant.name}"%>
   <% end %>
   <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
+    <%= hidden_field_tag :merchant_status, "update_status" %>
     <%= hidden_field_tag :status, 1 %>
     <%= hidden_field_tag :merchant_id, "#{merchant.id}" %>
     <%= f.submit "Disable #{merchant.name}"%>
