Feat: Updated to add merchant items show page

--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -2,6 +2,6 @@
 
 <div id="merchants-items">
   <p><% @items.each do |item| %></p>
-   <p><%= item.name %></p>
+   <p><%= link_to item.name, "/merchants/#{@merchant.id}/items/#{item.id}" %></p>
   <% end %>
 </div>
