--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,21 +1,49 @@
-<section id="merchants-list">
 <h1> Merchants </h1>
+
+<h3> Enabled Merchants </h3>
+<div id="merchants-enabled"> 
 <% @merchants.each do |merchant| %>
-  <div id="merchant-<%= merchant.id %>"> 
-  <%= link_to  merchant.name, "/admin/merchants/#{merchant.id}" %> 
-  <p> Status: <%= merchant.status %></p>
-  <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
-    <%= hidden_field_tag :merchant_status, "update_status" %>
-    <%= hidden_field_tag :status, 0 %>
-    <%= hidden_field_tag :merchant_id, merchant.id %>
-    <%= f.submit "Enable #{merchant.name}"%>
+  <% if merchant.status == "enabled" %>
+      <section id="merchant-<%= merchant.id %>"> 
+      <%= link_to  merchant.name, "/admin/merchants/#{merchant.id}" %> 
+      <p> Status: <%= merchant.status %></p>
+      <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
+        <%= hidden_field_tag :merchant_status, "update_status" %>
+        <%= hidden_field_tag :status, 0 %>
+        <%= hidden_field_tag :merchant_id, merchant.id %>
+        <%= f.submit "Enable #{merchant.name}"%>
+      <% end %>
+      <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
+        <%= hidden_field_tag :merchant_status, "update_status" %>
+        <%= hidden_field_tag :status, 1 %>
+        <%= hidden_field_tag :merchant_id, "#{merchant.id}" %>
+        <%= f.submit "Disable #{merchant.name}"%>
+      <% end %>
+      </section> <br>
+    </div>
   <% end %>
-  <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
-    <%= hidden_field_tag :merchant_status, "update_status" %>
-    <%= hidden_field_tag :status, 1 %>
-    <%= hidden_field_tag :merchant_id, "#{merchant.id}" %>
-    <%= f.submit "Disable #{merchant.name}"%>
-  <% end %>
-  </div> <br>
 <% end %>
-</section>
+
+<h3> Disabled Merchants </h3>
+<div id="merchants-disabled"> 
+<% @merchants.each do |merchant| %>
+  <% if merchant.status == "disabled" %>
+      <section id="merchant-<%= merchant.id %>"> 
+      <%= link_to  merchant.name, "/admin/merchants/#{merchant.id}" %> 
+      <p> Status: <%= merchant.status %></p>
+      <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
+        <%= hidden_field_tag :merchant_status, "update_status" %>
+        <%= hidden_field_tag :status, 0 %>
+        <%= hidden_field_tag :merchant_id, merchant.id %>
+        <%= f.submit "Enable #{merchant.name}"%>
+      <% end %>
+      <%= form_with url: "/admin/merchants", method: :patch, data: {turbo: false}, local: true do |f| %>
+        <%= hidden_field_tag :merchant_status, "update_status" %>
+        <%= hidden_field_tag :status, 1 %>
+        <%= hidden_field_tag :merchant_id, "#{merchant.id}" %>
+        <%= f.submit "Disable #{merchant.name}"%>
+      <% end %>
+      </section> <br>
+    </div>
+  <% end %>
+<% end %>
