--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -2,6 +2,7 @@
 
 <div id="merchants-items">
   <p><% @items.each do |item| %></p>
-   <p><%= link_to item.name, "/merchants/#{@merchant.id}/items/#{item.id}" %></p>
+  <p><%= link_to item.name, "/merchants/#{@merchant.id}/items/#{item.id}" %>
+  <%= button_to "Disable/Enable Item", "/merchants/#{@merchant.id}/items", method: :patch  %></p>
   <% end %>
 </div>
