--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -3,12 +3,6 @@
 <p><%= link_to 'Merchants', '/admin/merchants' %><p>
 <p><%= link_to 'Invoices', '/admin/invoices' %><p>
 
-<div id="incomplete-invoices">
-  <h2>Incomplete Invoices</h2>
-  <% @invoice_ids.each do |invoice_id| %>
-  <p><%= link_to "Invoice ID ##{invoice_id}", admin_invoice_path(invoice_id) %></p>
-  <% end %>
-</div>
 <section id="top5">
   <h2> Top 5 Customers: </h2> 
   <% @customers.top_5.each do |customer| %>
@@ -19,3 +13,13 @@
     </div>
   <% end %>
 </section>
+
+<div id="incomplete-invoices">
+  <h2>Incomplete Invoices</h2>
+  <% @invoices.each do |invoice| %>
+    <p>
+      <%= link_to "Invoice ID ##{invoice.id}", admin_invoice_path(invoice.id) %>
+      - Created: <%= invoice.created_at.strftime("%A, %B %d, %Y") %>
+    </p>
+  <% end %>
+</div>
