fix merchant status tests

--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,5 +1,7 @@
 <h1> Merchants </h1>
 
+<%= link_to "Create a New Merchant", "/admin/merchants/new" %>
+
 <h3> Enabled Merchants </h3>
 <div id="merchants-enabled"> 
 <% @merchants.each do |merchant| %>
