--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -1,5 +1,7 @@
 <h3><%= @merchant.name %></h3>
 
+<%= link_to "Create new item", "/merchants/items/new" %>
+
 <div id="merchants_items">
 <p><% @items.each do |item| %></p>
   <div id="merchants_items-<%= item.id %>">
@@ -26,3 +28,5 @@
     <p><%= item.name %></p>
   <% end %>
 </div>
+
+
