--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -1,6 +1,6 @@
 <h3><%= @merchant.name %></h3>
 
-<%= link_to "Create new item", "/merchants/items/new" %>
+<%= link_to "Create new item", "/merchants/#{@merchant.id}/items", params: {:merchant_id => @merchant.id} %>
 
 <div id="merchants_items">
 <p><% @items.each do |item| %></p>
@@ -28,5 +28,3 @@
     <p><%= item.name %></p>
   <% end %>
 </div>
-
-
