--- a/app/views/merchant/items/new.html.erb
+++ b/app/views/merchant/items/new.html.erb
@@ -1,12 +1,14 @@
+<h1>Create New Item</h1>
 
-
-<%= form_with url: "/merchants/items/new", method: :post, local: true do |f| %>
+<%= form_with url: "/merchants/#{@merchant.id}/items/new", method: :post, local: true do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :description %>
   <%= f.text_field :description %>
   <%= f.label :unit_price %>
   <%= f.text_field :unit_price %>
-
+  <%= f.label :merchant_id %>
+  <%= f.collection_select :merchant_id, Merchant.all, :id, :name %>
+  
   <%= f.submit "Submit" %>
 <% end %>
