--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -2,6 +2,17 @@
 
 <%= link_to "Create a New Merchant", "/admin/merchants/new" %>
 
+<h2> Top 5 Merchants by Revenue </h2>
+<section id="top-5">
+<% @merchants_top_5.each do |merchant| %>
+  <div id="merchant-<%= merchant.id %>">
+  <%= link_to "merchant.name", admin_merchants_path(merchant) %>
+  <%= "total revenue" %>
+  <p> Top selling date for <%= merchant.name %> was <%= merchant.best_day %> </p>
+  </div>
+<% end %>
+</section>
+
 <h3> Enabled Merchants </h3>
 <div id="merchants-enabled"> 
 <% @merchants.each do |merchant| %>
