--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -6,7 +6,7 @@
 <section id="top-5">
 <% @merchants_top_5.each do |merchant| %>
   <div id="merchant-<%= merchant.id %>">
-  <%= link_to "merchant.name", admin_merchants_path(merchant) %>
+  <%= link_to "#{merchant.name}", admin_merchants_path(merchant) %>
   <%= "total revenue" %>
   <p> Top selling date for <%= merchant.name %> was <%= merchant.best_day %> </p>
   </div>
