add finished feature and model tests for best day

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Admin Dashboard<h2>
 
-<p><%= link_to 'Merchants', '/admin/merchants' %><p>
+<p><%= link_to 'Merchants', admin_merchants_path %><p>
 <p><%= link_to 'Invoices', '/admin/invoices' %><p>
 
 <section id="top5">
