--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -2,4 +2,11 @@
 <p> Status: <%= @invoice.status %></p>
 <p> Created at: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
 <p> Customer: <%= @invoice.customer.first_name %>, <%= @invoice.customer.last_name %></p>
+<h3> Items on this invoice: </h3> 
+<% @items.each do |item| %>
+  <p>Item: <%= item.name %></p>
+  <p>Quantit: <%= item.invoice_item.quantity %></p>
+  <p>Item sold for: <%= item.invoice_item.unit_price %></p>
+  <p>Order Status: <%= item.invoice_item.status %></p>
+<% end %>
 
