--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -28,4 +28,8 @@
 </div>
 
 <div id ="popular-items">
+  <h3>Popular Items</h3>
+  <% @item_rev.each do |item| %>
+    <p><%= link_to item.name, "/merchants/#{@merchant.id}/items/#{item.id}" %> $<%= item.item_rev_dollars %> </p>
+  <% end %>
 </div>
