--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -2,6 +2,7 @@
 <p> Status: <%= @invoice.status %></p>
 <p> Created at: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
 <p> Customer: <%= @invoice.customer.first_name %>, <%= @invoice.customer.last_name %></p>
+<p> Total Revenue: <%= @invoice.total_revenue %></p>
 <h3> Items on this invoice: </h3> 
 <% @items.each do |item| %>
   <section id="item-<%= item.id%>">
