US 18 in progress

--- a/app/views/merchant/invoice/show.html.erb
+++ b/app/views/merchant/invoice/show.html.erb
@@ -11,10 +11,9 @@
     <p>Item name:</b> <%= inv_item.item.name %></p>
     <p>Quantity:</b> <%= inv_item.quantity %></p>
     <p>Price per item:</b> <%= inv_item.unit_price %></p>
-    <p>Status:</b> <%= inv_item.status %> </p></p>
-    <%= form_with url: "/merchants/@merchant.id/invoices/@invoice.id", method: :patch do |f| %>
-      <%= f.label :itemstatus, "itemstatus" %>
-      <%= f.select(:itemstatus, [["enabled", 0], ["disabled", 1]], selected: inv_item.status) %>
+    <%= form_with url: "/merchants/#{@merchant.id}/invoices/#{@invoice.id}", method: :patch do |f| %>
+      <%= f.label :itemstatus, "Status of Item" %>
+      <%= f.select(:itemstatus, [["packaged", 0], ["pending", 1], ["shipped", 2]], selected: inv_item.status) %>
       <%= f.submit "Update Item Status", params: {:merchant_id => @merchant.id, :invoice_id => @invoice.id} %>
     <% end %>
     </div>
