--- a/app/views/merchant/items/show.html.erb
+++ b/app/views/merchant/items/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @item.name %></h1>
+<%= image_tag Unsplash::Photo.find('sp1BZ1atp7M')[:urls][:thumb], size: "300x400", alt: "Specific Photo", style: "margin: 0 auto;" %>
 <p>Description: <%= @item.description %></p>
 <p>Current Price: <%= @item.unit_price %></p>
 
