--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -6,7 +6,7 @@
 <section id="top-5">
 <% @top_merchants.each do |merchant| %>
   <div id="merchant-best-<%= merchant.id %>">
-  <%= link_to "#{merchant.name}", admin_merchants_path(merchant) %> 
+  <%= link_to "#{merchant.name}", "/admin/merchants/#{merchant.id}" %> 
   <p>Total Revenue: <%= number_to_currency(merchant.total_revenue / 100.0) %></p>
   <p> Top selling date for <%= merchant.name %> was <%= merchant.best_day %> </p>
   </div>
