--- a/app/views/admin/invoices/index.html.erb
+++ b/app/views/admin/invoices/index.html.erb
@@ -1,3 +1,9 @@
+<style>
+  h1 {
+    text-align: center;
+  }
+</style>
+
 <h1> All Invoices </h1>
 <% @invoices.each do |invoice| %>
   <%=link_to "#{invoice.id}", admin_invoice_path(invoice) %>
