--- a/app/views/merchant/items/edit.html.erb
+++ b/app/views/merchant/items/edit.html.erb
@@ -1,11 +1,4 @@
 <h1>Edit <%= @item.name %></h1>
-
-<%= form_with url: "/merchants/#{@merchant.id}/items/#{@item.id}", method: :patch, data: {turbo: false}, local: true do |f| %> 
-  <%= f.label :name %>
-  <%= f.text_field :name, value: "#{@item.name}" %>
-  <%= f.label :description %>
-  <%= f.text_field :description, value: "#{@item.description}" %>
-  <%= f.label :unit_price %>
-  <%= f.text_field :unit_price, value: "#{@item.unit_price}" %>
-  <%= f.submit %>
-<% end %>
+<%= render partial: "new_edit_form", locals: {
+  path: "/merchants/#{@merchant.id}/items/#{@item.id}", 
+  method: :patch} %>
