--- a/app/views/merchant/items/new.html.erb
+++ b/app/views/merchant/items/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create New Item</h1>
 
-<%= form_with url: "/merchants/#{@merchant.id}/items/new", method: :post, local: true do |f| %>
+<%= form_with url: "/merchants/#{@merchant.id}/items", method: :post, local: true do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :description %>
