Fix routes and partial view for items/new route

--- a/app/views/merchant/items/new.html.erb
+++ b/app/views/merchant/items/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create New Item</h1>
 <%= render partial: "new_edit_form", locals: {
-  path: "/merchants/#{@merchant.id}/items/new",
+  path: "/merchants/#{@merchant.id}/items",
   method: :post,
 } %>
