--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -1,6 +1,6 @@
 <h3><%= @merchant.name %></h3>
 
-<%= link_to "Create new item", "/merchants/#{@merchant.id}/items/new", params: {:merchant_id => @merchant.id} %>
+<%= link_to "Create New Item", "/merchants/#{@merchant.id}/items/new", params: {:merchant_id => @merchant.id} %>
 
 <div id="merchants_items">
 <p><% @items.each do |item| %></p>
